==============
Changelog
==============
2019-11-25 (version 1.10):
    * fixed #103: EOTSV crashed on Linux, caused by an attempt to storing a unpickable QgsTextFormat to QSettings
    * improved matching of source images to sensors: matching can be specified in the settings dialog. Sensor matching
      based on ground sampling distance + number of bands + data type and optionally wavelength and/or sensor name
    * settings dialog shows known sensor / product specification and allows to modify their default "sensor name"
    * fixed copying of layer styles to maps of same sensor and map view type
    * improved speed of mapping and layer buffering
    * failed image sources are logged in the EO Time Series Viewer log panel
    * Spectral Library Viewer better handles large collections of spectral profiles

2019-10-02 (version 1.9):
    * includes several smaller updates
    * fixed error 'shortcutVisibleInContextMenu' error that occurred with Qt < 5.10
    * enhanced wavelength extraction from GDAL metadata: wavelength can be specified per band

2019-09-19 (version 1.8):
    * updated spectral library module
    * fixed #104: error in case of wrong spatial extent
    * default CRS properly shown in map view settings
    * user-defined CRS visible

2019-08-06 (version 1.7):
    * increased contrast for default map view text
    * improved reading of wavelength information, e.g. from Pleiades, Sentinel-2 and RapidEye data
    * temporal profile plot: data gaps can be shown by breaks in the profile line, data source information is correctly shown for selected points only
    * current extent can be copied via MapCanvas context menu
    * fixed #102: move maps to date of interest selected in a temporal profile plot

2019-07-16 (version 1.6):
    * re-design of map visualization: faster and more compact, the number of maps is fixed to n dates x m map views
    * date, sensor or map view information can be plotted within each map and become available in screenshots