@@ -1,0 +1,40 @@
+# This file is a template, and might need editing before it works on your project.
+# Official language image. Look for the different tagged releases at:
+# https://hub.docker.com/r/library/python/tags/
+image: qgis/qgis
+
+# Change pip's cache directory to be inside the project directory since we can
+# only cache local items.
+variables:
+  PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+
+# Pip's cache doesn't store the python packages
+# https://pip.pypa.io/en/stable/reference/pip_install/#caching
+#
+# If you want to also cache the installed packages, you have to install
+# them in a virtualenv and cache it as well.
+cache:
+  paths:
+    - .cache/pip
+    - venv/
+
+before_script:
+- apt-get update
+  - apt-get -y install git-lfs
+  - apt-get install -y wget
+  - apt-get install -y unzip
+  - git lfs install
+  - git lfs fetch
+  - git lfs pull
+  - git lfs checkout
+  - QT_QPA_PLATFORM=offscreen
+  - export QT_QPA_PLATFORM
+  - docker info
+  - python3 -V  # Print out python version for debugging
+  - python -V
+
+test:
+  script:
+    - mkdir test-reports
+    - chmod +x runtests.sh
+    - ./runtests.sh
