@@ -364,9 +364,15 @@ ul.auto-toc {
 <h1 class="title">Changelog</h1>
 
 <dl class="docutils">
+<dt>2020-01-23 (version 1.11):</dt>
+<dd><ul class="first last simple">
+<li>revised unit tests for CI pipelines</li>
+<li>fixed smaller issues in SensorModel</li>
+<li>fixed <a class="reference external" href="https://bitbucket.org/jakimowb/eo-time-series-viewer/issues/103">#103</a>: EOTSV crashed on Linux, caused by an attempt to storing a unpickable QgsTextFormat to QSettings</li>
+</ul>
+</dd>
 <dt>2019-11-25 (version 1.10):</dt>
 <dd><ul class="first last simple">
-<li>fixed <a class="reference external" href="https://bitbucket.org/jakimowb/eo-time-series-viewer/issues/103">#103</a>: EOTSV crashed on Linux, caused by an attempt to storing a unpickable QgsTextFormat to QSettings</li>
 <li>improved matching of source images to sensors: matching can be specified in the settings dialog. Sensor matching
 based on ground sampling distance + number of bands + data type and optionally wavelength and/or sensor name</li>
 <li>settings dialog shows known sensor / product specification and allows to modify their default &quot;sensor name&quot;</li>
