@@ -21,7 +21,7 @@
 # noinspection PyPep8Naming
 
 
-__version__ = '1.10'  # sub-subversion number is added automatically
+__version__ = '1.11'  # sub-subversion number is added automatically
 LICENSE = 'GNU GPL-3'
 TITLE = 'EO Time Series Viewer'
 LOG_MESSAGE_TAG = TITLE
